# rrule-wasm

./: Cargo.toml  README.md
.cargo/: config.toml
rrule/: Cargo.toml  Makefile
rrule/examples/wasm/nodejs/: app.js
rrule/examples/wasm/web/: benchmarking.js  index.html  package.json  rrule_utils.js
rrule/src/: lib.rs
rrule/src/core/: datetime.rs  rrule.rs  timezone.rs  timezone_impl.rs  utils.rs
rrule/src/parser/: datetime.rs
rrule/src/parser/content_line/: date_content_line.rs  parameters.rs  rule_content_line.rs
rrule/src/tests/: regression.rs  rrule.rs
rrule/src/validator/: validate_rrule.rs
rrule/src/wasm/: datetime_utils.rs  mod.rs
rust_recurrence_generator/: .gitignore  Cargo.toml  Makefile  README.md
rust_recurrence_generator/src/: lib.rs  recurrence_generator.rs
rust_recurrence_generator/src/headers/: c_api.h  module.modulemap
