[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74.0"

[workspace]
members = [
    "rrule",
    "rrule-debugger"
]
resolver = "2"

# These are the 2 packages to mainly work on.
# So `cargo test` and `cargo run` both work.
default-members = ["rrule", "rrule-debugger"]

[profile.dev]
# Always have overflow checks until crate is stable, see roadmap.
overflow-checks = true

[profile.release]
# Always have overflow checks until crate is stable, see roadmap.
overflow-checks = false
# Optimize for speed
opt-level = 3
# Enable Link Time Optimization
lto = true
# Reduce the number of codegen units to increase optimization
codegen-units = 1
# Disable debug info
debug = false

